# dillinger

./: .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .prettierrc.json  AGENTS.md  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VICE.md  README.DEVS.md  README.MD  README.USERS.md  README.md  README.md.old  README_build_notes.MD  README_how_to_build.MD  RUNNER_ARCH_CONVERSION.md  SCRIPTS.md  build-docker.sh  build_dillinger.sh  build_dillinger.tsx  build_gamescope.sh  build_gstreamer.sh  build_weston.sh  build_wine_ge_custom.sh  build_wlroots.sh  copy_gamescope_binary.sh  dillinger.code-workspace  dillinger.sh  docker-compose.dev.yml  docker-compose.runner.yml.old  docker-compose.runners.yml  docker-compose.yml  ecosystem.config.cjs  file_count.sh  install_gamescope_binary.sh  makefile  (+13 more)
.devcontainer/: # Dillinger CLI Implementation Plan.prompt.md  Dockerfile  README.md  devcontainer.json
.github/: copilot-instructions.md
1.client/: bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js
2.server/: .gitignore  Cargo.toml  dillinger_config.toml  run_dev.sh
2.server/dev_root_dir/: dillinger_config.toml  game_cache copy.toml  game_cache.toml
2.server/dev_root_dir/entries/test1/: test1.toml
2.server/dev_root_dir/pacman/: pacman.toml
2.server/dev_root_dir/system/search_cache/: last_search.toml
2.server/src/: config.rs  error_response.rs  game.rs  game_manager.rs  main.rs  platform.rs  system.rs
2.server/src/docker/: docker_interactor.rs  docker_wine_runner.rs  mod.rs  volumes.rs
2.server/src/entities/: dillinger_error.rs  game.rs  mod.rs  network_message.rs  platform.rs  playstats.rs
2.server/src/files/: filesystem.rs
2.server/src/gamedb/: gamedb.rs  gamedb_search.rs  gamedbtoken.rs  igdb.rs  mod.rs
2.server/src/handlers/: cache.rs  diagnostics.rs  docker.rs  docker_interactor.rs  files.rs  game.rs  mod.rs  socket_client.rs  web_request.rs
2.server/src/helpers/: docker_run_params.rs  mod.rs
2.server/src/input/: mod.rs  udev.rs
2.server/src/lutris/: lutris_installer.rs  mod.rs
2.server/src/network/: file_transfer.rs  mod.rs  network_manager.rs
2.server/src/scrapers/: igdb.rs  scrapers.rs
2.server/src/tests/: mod.rs  test_file_transfer.rs
3.docker/: makefile
4.builder/: makefile
6.devtools/: file_count.sh
6.launch/: launch_base_test.sh  launch_core.sh  launch_custom_cc2.sh  launch_custom_sc.sh  launch_custom_wine.sh  launch_winerunner_test.sh  rum.sh  run_ge.sh
7.experiments/: README.MD
cli/: .gitignore  Cargo.toml  empty_config.yml
client_cli/: Cargo.toml
client_cli/src/: main.rs  state.rs  status_panel.rs  theme_default.rs
client_web/: package-lock.json  package.json  webpack.config.js
daemon/: .env  .gitignore  Cargo.toml  makefile
dillinger_lib/: Cargo.toml
dillinger_lib/src/: docker.rs  heartbeat.rs  lib.rs
docker/: scratchpad.txt
docs/: BUILD_PROGRESS_FEATURES.md  DILLINGER_ROOT_VOLUME.md  GAMESCOPE_MOONLIGHT.md  GHCR_PUBLISHING.md  GOG_CACHING_MODAL_SUMMARY.md  GOG_INTEGRATION.md  GOG_INTEGRATION_SUMMARY.md  GOG_MODAL_IMPLEMENTATION_PLAN.md  GOG_PAGINATION.md  GOG_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  JSON_SCHEMA_VERSIONING.md  LUTRIS_SCRIPT_SUPPORT.md  PERMISSION_MODEL.md  RUNNER_IMAGES_CONSOLIDATION.md
gst/: Cargo.toml
release_assets/: README.md  build_release.sh  (+1 more)
(+221 files in other folders)
