[package]
name = "dillinger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.81"
bollard = { version = "0.16.1", features = ["buildkit"]}
chrono = { version = "0.4.38", features = ["serde"]}
dockworker = "0.5.1"
dotenv = "0.15.0"
env_logger = "0.11.3"
futures = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.21"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_toml = "0.0.1"
serde_yaml = "0.9.34"
tokio = { version = "1.35.1", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.15"
toml = "0.8.14"
tower = "0.4.13"
tower-http = "0.5.2"
udev = "0.9.0"
urlencoding = "2.1.3"
uuid = { version = "1.9.0", features = ["v4", "serde"] }
warp = "0.3.7"

[target.'cfg(not(target_os = "macos"))'.dependencies]
udev = "0.9.0"

[dev-dependencies]
cargo-watch = "8.5.2"
warp-cors = "0.3.0"
