[package]
name = "dillinger-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
cursive = "0.20.0"
serde = "1.0.164"
serde_json = "1.0.96"
tokio = "1.28.2"
dillinger_lib = { path = "../dillinger_lib" }
